Fix browsertests failures in TaskTracker when starting TaskScheduler early

Add an additional check before calling
GetPreemptedSequenceToScheduleLockRequired().

Bug: 892633
Change-Id: I7ee9bcf1e05a96dbabb9378fc6ea99118e0810fe
Reviewed-on: https://chromium-review.googlesource.com/c/1263894
Reviewed-by: François Doray <fdoray@chromium.org>
Commit-Queue: Xi Han <hanxi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597220}
Former-commit-id: cc43e59838736c799542d7713b6a9f54c25131e6